updated read me

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,5 @@
-Rails and Ember.js version of Twitter Public Timeline
+<h2>Rails and Ember.js version of Twitter Public Timeline</h2>
+
+<a href="http://smooth-dusk-9388.herokuapp.com">Twitter Public Timeline</a>
+
+<p>Add docs of ember code</p>
